Fix logo spacing when smaller than laptop size.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -183,9 +183,13 @@ footer {
   bottom:50px;
 }
 
-.logo { float:left; margin-right:10px; }
+.logo { float:left; margin-right:10px; margin-top: -30px; }
 .logo + h1 { margin-top: 30px; }
   
+
+@media print, screen and (min-width: 961px) {
+  .logo { margin-top: 0px; }
+}
 
 @media print, screen and (max-width: 960px) {
   
@@ -220,6 +224,7 @@ footer {
     right:50px;
     top:52px;
   }
+
 }
 
 @media print, screen and (max-width: 720px) {
@@ -234,8 +239,6 @@ footer {
   header ul, header p.view {
     position:static;
   }
-
-  .logo { margin-top: -30px; }
   
   pre, code {
     word-wrap:normal;
@@ -250,8 +253,6 @@ footer {
   header ul {
     display:none;
   }
-
-  .logo { margin-top: -30px; }
 }
 
 @media print {
